--- a/.github/workflows/maven-test.yml
+++ b/.github/workflows/maven-test.yml
@@ -12,27 +12,37 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:latest
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: sapiblog
+
     steps:
-      # 1. 拉取代码
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2. 设置 JDK 版本（如 Java 17）
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'temurin'  # 可选: 'zulu', 'adopt'
+          distribution: 'temurin'
 
-      # 3. 缓存 Maven 依赖
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+      - name: Wait for PostgreSQL to start
+        run: |
+          while ! pg_isready -h localhost -p 5432 -U postgres; do
+            echo "Waiting for PostgreSQL to start..."
+            sleep 2
+          done
 
-      # 4. 执行 Maven 测试（激活 test 环境）
+      - name: Run SQL script to initialize the database
+        run: |
+          echo "Running SQL script to initialize the database"
+          PGPASSWORD=postgres psql -h localhost -U postgres -d sapiblog -f src/test/resources/schema.sql
+
       - name: Run Maven tests with H2
-        run: mvn clean test -Pgithub
+        run: mvn clean test
