--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/sapiblog
 jwt.sk=asdnuihnicuhnv
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
