--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=SApiBlog
+#server.port=10000
 mybatis-plus.configuration.map-underscore-to-camel-case=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
